<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<groupId>com.octo.gwt.test</groupId>
	<artifactId>demos-parent</artifactId>
	<packaging>pom</packaging>
	<version>1.0-SNAPSHOT</version>
	<name>${project.artifactId}</name>
	
	<modules>
		<module>demo-csv</module>
		<module>demo-mocks</module>
		<module>demo-simple</module>
		<module>demo-spring</module>
	</modules>
	
	<scm>
		<developerConnection>scm:svn:https://gwt-test-utils.googlecode.com/svn/src/demos/trunk</developerConnection>
	</scm>

	<properties>
		<encoding>UTF-8</encoding>
		<gwt.version>2.3.0</gwt.version>
		<gwt.maven.plugin.version>2.3.0</gwt.maven.plugin.version>
		<gwt.test.utils.version>0.31-SNAPSHOT</gwt.test.utils.version>
		<java.version>1.5</java.version>
		<spring.version>3.0.5.RELEASE</spring.version>
	</properties>

	<repositories>
		<!-- octo public repository -->
		<repository>
			<id>public-forge.octo.com</id>
			<url>http://forge.octo.com/nexus/content/repositories/public/</url>
		</repository>
		<!-- octo release repository -->
		<repository>
			<id>release-forge.octo.com</id>
			<url>http://forge.octo.com/nexus/content/repositories/releases/</url>
		</repository>
		<!-- octo snapshot repository -->
		<repository>
			<id>snapshot-forge.octo.com</id>
			<url>http://forge.octo.com/nexus/content/repositories/snapshots/</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
			<releases>
				<enabled>false</enabled>
			</releases>
		</repository>
	</repositories>	

	<dependencyManagement>
		<dependencies>
		<dependency>
			<groupId>com.octo.gwt.test</groupId>
			<artifactId>gwt-test-utils</artifactId>
			<version>${gwt.test.utils.version}</version>
		</dependency>
		<dependency>
			<groupId>com.octo.gwt.test</groupId>
			<artifactId>gwt-test-utils-csv</artifactId>
			<version>${gwt.test.utils.version}</version>
		</dependency>
		<dependency>
			<groupId>com.octo.gwt.test</groupId>
			<artifactId>gwt-test-utils-gxt</artifactId>
			<version>${gwt.test.utils.version}</version>
		</dependency>
		<dependency>
			<groupId>com.octo.gwt.test</groupId>
			<artifactId>gwt-test-utils-spring3</artifactId>
			<version>${gwt.test.utils.version}</version>
		</dependency>
		<dependency>
			<groupId>com.google.gwt</groupId>
			<artifactId>gwt-user</artifactId>
			<version>${gwt.version}</version>
		</dependency>
		<dependency>
			<groupId>com.google.gwt</groupId>
			<artifactId>gwt-servlet</artifactId>
			<version>${gwt.version}</version>
		</dependency>
		<dependency>
			<groupId>com.google.gwt</groupId>
			<artifactId>gwt-dev</artifactId>
			<version>${gwt.version}</version>
		</dependency>
		<dependency>
			<groupId>com.extjs</groupId>
			<artifactId>gxt</artifactId>
			<version>2.2.4</version>
			<classifier>${gxt.classifier}</classifier>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-web</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-test</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.gwtrpcspring</groupId>
			<artifactId>gwtrpc-spring</artifactId>
			<version>1.01</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.8.2</version>
		</dependency>
		<dependency>
			<groupId>org.easymock</groupId>
			<artifactId>easymock</artifactId>
			<version>3.0</version>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>1.8.5</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.6.1</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
			<version>1.6.1</version>
		</dependency>
		</dependencies>
	</dependencyManagement>
	
	<dependencies>
		<!-- test -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<encoding>${encoding}</encoding>
					<source>${java.version}</source>
					<target>${java.version}</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>2.4.1</version>
				<configuration>
					<encoding>${encoding}</encoding>
				</configuration>
			</plugin>

			<!-- add memory to the maven test plugin because gwt-test-utils can be 
				expensive for big projects -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<argLine>-XX:MaxPermSize=128M -Xmx512M</argLine>
				</configuration>
			</plugin>

					<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.0.2</version>
				<configuration>
					<encoding>${encoding}</encoding>
					<source>${java.version}</source>
					<target>${java.version}</target>
				</configuration>
			</plugin>

			<!-- add memory to the maven test plugin because gwt-test-utils can be 
				expensive for big projects -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<argLine>-XX:MaxPermSize=128M -Xmx512M</argLine>
				</configuration>
			</plugin>

			<!-- add the jetty plugin to test the full compiled JS application with 
				the 'jetty:run-war' goal -->
			<plugin>
				<groupId>org.mortbay.jetty</groupId>
				<artifactId>maven-jetty-plugin</artifactId>
				<version>6.1.5</version>
			</plugin>
		</plugins>
	</build>
	
	<profiles>
		<profile>
			<id>no-gwt-compile</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.codehaus.mojo</groupId>
						<artifactId>gwt-maven-plugin</artifactId>
						<version>${gwt.maven.plugin.version}</version>
						<configuration>
							<skip>true</skip>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

</project>
